# rust_exercism_solutions

./: LICENSE  README.md
solutions/csharp/annalyns-infiltration/1/: AnnalynsInfiltration.cs
solutions/csharp/bird-watcher/1/: BirdWatcher.cs
solutions/csharp/booking-up-for-beauty/1/: BookingUpForBeauty.cs
solutions/csharp/cars-assemble/1/: CarsAssemble.cs
solutions/csharp/cars-assemble/2/: CarsAssemble.cs
solutions/csharp/interest-is-interesting/1/: InterestIsInteresting.cs
solutions/csharp/jedliks-toys/1/: JedliksToys.cs
solutions/csharp/log-analysis/1/: LogAnalysis.cs
solutions/csharp/log-analysis/2/: LogAnalysis.cs
solutions/csharp/log-levels/1/: LogLevels.cs
solutions/csharp/lucians-luscious-lasagna/1/: LuciansLusciousLasagna.cs
solutions/csharp/lucians-luscious-lasagna/2/: LuciansLusciousLasagna.cs
solutions/csharp/need-for-speed/1/: NeedForSpeed.cs
solutions/csharp/phone-number-analysis/1/: PhoneNumberAnalysis.cs
solutions/csharp/roll-the-die/1/: RollTheDie.cs
solutions/csharp/tim-from-marketing/1/: TimFromMarketing.cs
solutions/csharp/wizards-and-warriors/1/: WizardsAndWarriors.cs
solutions/rust/affine-cipher/1/: Cargo.toml
solutions/rust/alphametics/1/: Cargo.toml
solutions/rust/anagram/1/: Cargo.toml
solutions/rust/bowling/2/: Cargo.toml
solutions/rust/grade-school/1/: Cargo.toml
solutions/rust/high-scores/1/: Cargo.toml
solutions/rust/pig-latin/2/: Cargo.toml
solutions/rust/robot-name/2/: Cargo.toml
solutions/rust/wordy/4/: Cargo.toml
solutions/rust/wordy/4/src/: lib.rs
solutions/rust/wordy/5/: Cargo.toml
(+95 files in other folders)
